# tokenspeed

./: README.md
.github/workflows/: pr-test.yml  scheduler-cpp-test.yml
.skills/: optimize-amd-gpu-kernel.md
python/: pyproject.toml
python/tokenspeed/runtime/cache/: flat_host_mirror.py
python/tokenspeed/runtime/cache/executor/: flat_memory_executor.py
python/tokenspeed/runtime/configs/: deepseek_v4_cache_spec.py  flat_memory_plan.py  paged_cache_spec.py  qwen3_5_text_base_config.py
python/tokenspeed/runtime/engine/: event_loop.py  generation_output_processor.py  scheduler_utils.py
python/tokenspeed/runtime/execution/: cuda_graph_wrapper.py  model_executor.py  model_runner.py  prefill_graph.py
python/tokenspeed/runtime/layers/: paged_attention.py
python/tokenspeed/runtime/layers/attention/: deepseek_v4_ops.py  mm_encoder_attention.py  registry.py
python/tokenspeed/runtime/layers/attention/backends/: base.py  deepseek_v4.py  flat_groups.py  hybrid_linear_attn.py  mha.py  mla.py  trtllm.py
python/tokenspeed/runtime/layers/attention/configs/: mha.py
python/tokenspeed/runtime/layers/attention/deepseek_v4/: metadata.py
python/tokenspeed/runtime/layers/attention/kv_cache/: deepseek_v4.py  flat_state_slabs.py  mha.py
python/tokenspeed/runtime/models/: deepseek_v4.py  gpt_oss.py  kimi_k25.py  qwen3_5.py
python/tokenspeed/runtime/utils/: env.py  server_args.py
test/ci/eval/: gpt-oss-120b-mxfp4-evalscope-gpqa-diamond.yaml  kimi-k2.5-mxfp4-evalscope-aime25-amd.yaml
test/ci/perf/: kimi-k2.5-nvfp4-evalscope-agentic.yaml  qwen3.5-397b-a17b-nvfp4-evalscope-agentic.yaml
test/ci_system/: install_deps.sh
test/random_benchmark/tokenspeed/: collect_outputs.py
test/runtime/: test_deepseek_v4_attention_ops.py  test_deepseek_v4_config.py  test_flat_block_tables_bridge.py  test_flat_cudagraph_per_group.py  test_flat_group_write_locs.py  test_flat_host_executor.py  test_flat_host_mirror.py  test_flat_host_tier_e2e.py  test_flat_memory_plan.py  test_flat_oom_terminal.py  test_flat_prefill_graph.py  test_flat_retract_readmit.py  test_flat_scheduler_config_guard.py  test_flat_state_slabs.py  test_flat_table_export_fast.py  test_gdn_flat_assembly.py  test_gdn_flat_state_paging.py  test_group_aware_mha.py  test_group_specs_from_layer_types.py  test_hybrid_cudagraph_kwargs.py  test_mha_pool_spec_decode_groups.py  test_multi_window_page_counts.py  test_prefix_cache_e2e.py  test_slab_capacity_prefix_hits.py  test_unified_kv_slab_pool.py  test_v4_prefix_cache_metadata.py
test/runtime/layers/: test_mamba_checkpoint_metadata.py  test_mla_verify_metadata.py
tokenspeed-kernel-amd/: THIRDPARTYNOTICES
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/ops/gemm/: __init__.py  mm_a16w16_gfx950.py  mm_a16w16_largem_gfx950.py
tokenspeed-kernel-amd/python/tokenspeed_kernel_amd/ops/moe/: fused_mxfp_gfx950.py  mxfp4_cdna4_scale_layout.py  mxfp4_gfx950_preprocess.py
tokenspeed-kernel-amd/test/ops/: test_mm_a16w16_gfx950.py  test_moe_sorting_gfx950.py  test_mxfp4_clean_warp_decode_gfx950.py  test_mxfp4_gfx950_preprocess.py
tokenspeed-kernel/python/: pyproject.toml
tokenspeed-kernel/python/requirements/: common.txt  cuda-thirdparty.txt  cuda.txt
tokenspeed-kernel/python/tokenspeed_kernel/: __init__.py  selection.py
tokenspeed-kernel/python/tokenspeed_kernel/ops/attention/: __init__.py
tokenspeed-kernel/python/tokenspeed_kernel/ops/communication/: triton.py
tokenspeed-kernel/python/tokenspeed_kernel/ops/gemm/: __init__.py  gluon.py
tokenspeed-kernel/python/tokenspeed_kernel/ops/quantization/: triton.py  trtllm.py
tokenspeed-kernel/test/: test_kernel_api_selection.py  test_selection.py
tokenspeed-kernel/test/ops/: test_attention.py
tokenspeed-mla/: README.md  pyproject.toml
tokenspeed-mla/python/tokenspeed_mla/: mla_prefill.py
tokenspeed-scheduler/: CMakeLists.txt
tokenspeed-scheduler/bindings/: python_module.cpp
tokenspeed-scheduler/csrc/cache/: README.md  block_pool.h  block_ref.h  cache_group.h  cache_types.h  forward_cache_ops.cpp  forward_cache_ops.h  full_attn_manager.h  kv_cache_coordinator.cpp  kv_cache_coordinator.h  kv_cache_manager.h  mamba_state_manager.h  swa_manager.h
tokenspeed-scheduler/csrc/core/: token_container.h
tokenspeed-scheduler/csrc/fsm/: forward_events.cpp  forward_events.h  forward_states.h  states.h
tokenspeed-scheduler/csrc/resource/: page_container.h
tokenspeed-scheduler/csrc/resource/allocator/: kv_allocator.h  paged_cache_group.cpp  paged_cache_group.h
tokenspeed-scheduler/csrc/resource/hybrid_prefix_cache/: hybrid_prefix_cache.cpp  hybrid_prefix_cache.h
tokenspeed-scheduler/csrc/scheduler/: execution_plan.h  outside_event_handler.cpp  page_hasher.h  request.cpp  request.h  request_spec.h  scheduler.cpp  scheduler.h  types.h
tokenspeed-scheduler/csrc/scheduler/block_diffusion/: lifecycle.cpp  planner.cpp  planner.h
tokenspeed-scheduler/csrc/scheduler/operations/: forward.cpp  forward.h
tokenspeed-scheduler/csrc/scheduler/outside_events/: cache.h  forward.h
tokenspeed-scheduler/python/tests/: test_flat_kvcache.py  test_fsm_and_scheduling.py  test_new_occupied_pages.py  test_paged_cache_group_admission.py  test_pd_binding.py  test_req_pool_indices.py  test_v4_chunked_prefill_sliding_release.py
tokenspeed-scheduler/python/tokenspeed_scheduler/: __init__.py
tokenspeed-scheduler/tests/cpp/: flat_known_radix_failures.txt  integration_test_helper.h  test_block_diffusion.cpp  test_block_diffusion_retention.cpp  test_block_pool.cpp  test_block_ref.cpp  test_chunked_prefill.cpp  test_flat_forward_operation.cpp  test_flat_kvcache_lifecycle.cpp  test_flat_kvcache_scenarios.cpp  test_forward_cache_ops.cpp  test_full_attn_manager.cpp  test_hybrid_takefirst_overflow.cpp  test_kv_cache_coordinator.cpp  test_load_back.cpp  test_mamba_integration.cpp  test_match_host_pages.cpp  test_outside_event_handler.cpp  test_page_hasher.cpp  test_paged_cache_attach_loop.cpp  test_paged_cache_replay.cpp  test_retract.cpp  test_retract_abort_pages.cpp  test_swa_manager.cpp
(+22 files in other folders)
