[build-system]
requires = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenspeed-mla"
version = "0.1.3"
description = "Speed-of-light TokenSpeed MLA kernels for Blackwell SM100 and SM103."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "apache-tvm-ffi>=0.1.5",
    "nvidia-cutlass-dsl",
    "tokenspeed-triton>=3.7.10.post20260505",
    "torch",
]

[project.urls]
Homepage = "https://github.com/lightseekorg/tokenspeed"
Repository = "https://github.com/lightseekorg/tokenspeed"

[tool.setuptools]
license-files = ["LICENSE", "THIRDPARTYNOTICES"]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
tokenspeed_mla = ["objs/*.so"]
